## Process this file with automake to produce Makefile.in
# $Id: Makefile.am,v 1.1 2005/09/09 16:12:01 leif Exp $

EXTRA_DIST = \
	opaldemo/bin/idd.py \
	opaldemo/bin/ipad.py \
	opaldemo/bin/journald.py \
	opaldemo/cgi/debug.py \
	opaldemo/cgi/demo.py \
	opaldemo/cgi/main.py \
	opaldemo/cgi/simple.py \
	opaldemo/config/demo.pml \
	opaldemo/config/idd-harness.pml \
	opaldemo/config/idd-pickler.odb \
	opaldemo/config/idd.pml \
	opaldemo/config/ipa-harness.pml \
	opaldemo/config/ipa-pickler.odb \
	opaldemo/config/ipa.pml \
	opaldemo/config/journald-harness.pml \
	opaldemo/config/journal.pml \
	opaldemo/config/main.pml \
	opaldemo/config/userdb.md5 \
	opaldemo/config/weaver.pml \
	opaldemo/content/actors/error.odb \
	opaldemo/content/actors/greet.odb \
	opaldemo/content/actors/login.odb \
	opaldemo/content/actors/pick.odb \
	opaldemo/content/actors/sentinel.odb \
	opaldemo/content/pages/authentication-error.odb \
	opaldemo/content/pages/debug.odb \
	opaldemo/content/pages/error.odb \
	opaldemo/content/pages/greet.odb \
	opaldemo/content/pages/login.odb \
	opaldemo/content/pages/sample.odb \
	opaldemo/content/pages/sentinel.odb \
	opaldemo/content/portlets/navigation.odb \
	opaldemo/html/css/classes-color.css \
	opaldemo/html/css/classes.css \
	opaldemo/html/css/portal.css \
	opaldemo/html/css/structural-color.css \
	opaldemo/html/css/structural.css \
	opaldemo/html/css/visual-color.css \
	opaldemo/html/css/visual.css \
	opaldemo/html/images/link_icon.gif \
	opaldemo/html/images/linkOpaque.gif \
	opaldemo/html/images/linkTransparent.gif \
	opaldemo/html/images/logo.png \
	opaldemo/html/images/pyre_logo_32.png \
	opaldemo/html/images/pyre_logo_64.png \
	opaldemo/html/images/pyre-logo.png \
	opaldemo/html/images/required.gif \
	opaldemo/html/images/search_icon.gif \
	opaldemo/html/index.html \
	opaldemo/html/login.html \
	opaldemo/html/sentinel.html \
	opaldemo/opaldemo/applications/__init__.py \
	opaldemo/opaldemo/applications/WebApplication.py \
	opaldemo/opaldemo/content/__init__.py \
	opaldemo/opaldemo/content/Page.py \
	opaldemo/opaldemo/__init__.py \
	shock/coupled.odb \
	shock/cube.odb \
	shock/shock.py \
	tabulator/etc/exponential.odb \
	tabulator/etc/quadratic.odb \
	tabulator/libtabulator/exponential.f90 \
	tabulator/libtabulator/local.def \
	tabulator/libtabulator/quadratic.f90 \
	tabulator/libtabulator/simpletab.f90 \
	tabulator/libtabulator/tabulator.f90 \
	tabulator/tabulator/Exponential.py \
	tabulator/tabulator/__init__.py \
	tabulator/tabulatormodule/bindings.cc \
	tabulator/tabulatormodule/bindings.h \
	tabulator/tabulatormodule/exceptions.cc \
	tabulator/tabulatormodule/exceptions.h \
	tabulator/tabulatormodule/local.def \
	tabulator/tabulatormodule/misc.cc \
	tabulator/tabulatormodule/misc.h \
	tabulator/tabulatormodule/tabulator.cc \
	tabulator/tabulatormodule/tabulator_externs.h \
	tabulator/tabulatormodule/tabulator.h \
	tabulator/tabulatormodule/_tabulatormodule.cc \
	tabulator/tabulator/Quadratic.py \
	tabulator/tabulator/Simple.py \
	tabulator/tabulator/Tabulator.py \
	tabulator/tests/dyntab.py \
	tabulator/tests/signon.py \
	tabulator/tests/simpletab.py

## end of Makefile.am
